# poc-aigc

./: .gitignore  README.md
chrome/: README.md  manifest.json  service-worker.js  sidepanel.html  sidepanel.js
kt/: Makefile  index.ipynb
langchain/: Makefile  README.md  index.ipynb  requirements.txt  senario.py
ollama/: .envrc-sample  .gitignore  README.md  pyproject.toml
ollama/library-reader/: README.md  pyproject.toml
ollama/src/library_reader/: chatbot.py  embedding.py  server.py
stable-diffusion/: README.md
