[project]
name = "library-reader"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Anddd7", email = "anddd7@icloud.com"},
]
dependencies = [
    "langchain>=0.1.12",
    "bs4>=0.0.2",
    "chroma>=0.2.0",
    "chromadb>=0.4.24",
    "langchainhub>=0.1.15",
]
requires-python = ">=3.11.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
